# convention-py

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml
Tripteki/Lint/: pylintrc
Tripteki/Lint/src/Console/: Kernel.py
Tripteki/Lint/src/Console/Commands/: LintCommand.py
Tripteki/Lint/src/Console/Commands/Contracts/: IConsoleKernel.py
